force-app/main/default/objects/Product_Dependency_Rule__mdt/Product_Dependency_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Product Dependency Rule</label>
    <pluralLabel>Product Dependency Rules</pluralLabel>
</CustomObject>