force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Dependency_Strength__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Strength__c</fullName>
    <label>Dependency Strength</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Strength of the dependency (e.g., Hard Stop, Degraded Service)</description>
</CustomField>