force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <label>Dependency Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Type of dependency relationship (e.g., Fiber Connection, Network Connection)</description>
</CustomField>