force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Dependent_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Keyword__c</fullName>
    <label>Dependent Keyword</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Keyword to match in the dependent product name (lowercase). Comma-separated for multiple keywords.</description>
</CustomField>