force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <label>Impact Level</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <description>Impact level if the source asset fails (e.g., Critical, High)</description>
</CustomField>