force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Relationship_Category__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Category__c</fullName>
    <label>Relationship Category</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Category of the relationship (e.g., Network, Data)</description>
</CustomField>