force-app/main/default/objects/Product_Dependency_Rule__mdt/fields/Source_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Source_Keyword__c</fullName>
    <label>Source Keyword</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Keyword to match in the source product name (lowercase)</description>
</CustomField>